syntax = "proto3";
package dbproto;

message News{
    int64  id = 1;
    string title = 2;
    string description = 3;
    string cover = 4;
    string content = 5;
    string html = 6;
    string author = 7;
    int64  created = 8;
    int32  newsClass = 9;
    bool   isVisible = 10;
    int64  updated = 11;
    int64  pageViews = 12;
}

message QueryNewsArg{
    string  title = 1;
    string  author = 2;
    int64   start = 3;
    int64   end = 4;
    int32   class = 5;
    int64   page = 6;
    int64   pageSize = 7;
}

message NewsList {
    repeated News list = 1;
    int64    total = 2;
}

message NewsId {
    int64 id = 1;
}

message QueryNewsOfSelect{
    string keyWord = 1;
}